# ros2_control_boilerplate

controller_interface/: CMakeLists.txt  package.xml  your_controller_name_plugin.xml
controller_interface/config/: controller.yaml
controller_interface/include/your_controller_name/: your_controller_name.hpp
controller_interface/src/: your_controller_name.cpp  your_controller_name_parameters.yaml
hardware_inteface/: CMakeLists.txt  package.xml  your_hardware_interface_plugin.xml
hardware_inteface/include/your_hardware_interface/: your_hardware_interface.hpp
hardware_inteface/src/: your_hardware_interface.cpp
