<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>your_controller_name</name>
  <version>0.0.0</version>
  <description>A template for ros2_control controller_interface</description>
  <maintainer email="falahnzk.dev@gmail.com">Falah N. Zaki</maintainer>
  <license>Apache License 2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>rclcpp_lifecycle</depend>
  <depend>controller_interface</depend>
  <depend>hardware_interface</depend>
  <depend>pluginlib</depend>
  <depend>generate_parameter_library</depend>
  <depend>parameter_traits</depend>
  <depend>backward_ros</depend>
  <depend>realtime_tools</depend>
  <depend>std_msgs</depend>
  
  <exec_depend>controller_manager</exec_depend>
  <exec_depend>ros2controlcli</exec_depend>
  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>